# cbom

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: crypto-gate.yml  release.yml
docs/: ARCHITECTURE.md  DETECTION_ENGINE.md  OUTPUT_FORMATS.md  SUPPORTED_LANGUAGES.md  TESTING.md
src/: dependencies.rs  diff.rs  history.rs  main.rs  models.rs  policy.rs  scanner.rs  tui.rs
