[package]
name = "keylens-cbom"
version = "0.1.1"
edition = "2021"
description = "A lightning-fast CLI tool to generate a Cryptographic Bill of Materials (CBOM) — scan codebases for crypto usage, assess PQC readiness, and enforce policy in CI"
authors = ["KeyLens <hello@keylens.dev>"]
license = "MPL-2.0"
homepage = "https://keylens.dev"
repository = "https://github.com/keylens/cbom"
readme = "README.md"
keywords = ["cbom", "cryptography", "pqc", "security", "sbom"]
categories = ["command-line-utilities"]

[[bin]]
name = "cbom"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-go = "0.20"
ignore = "0.4"
x509-parser = "0.16"
ratatui = "0.28"
crossterm = "0.28"
tempfile = "3.10"
